# babel

./: .env.example  .gitignore  CLAUDE.md  DEPLOY-UBUNTU.md  INSTALL.md  PLAN.md  README.md  TUNNEL.md  dev.sh  setup.sh
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: auth.py  config.py  db.py  deps.py  main.py  models.py
backend/app/adapters/: __init__.py  base.py  llamacpp.py
backend/app/routers/: admin.py  billing.py  documents.py  jobs.py  passkey.py  worker.py
backend/app/services/: analyzer.py  assemble.py  credits.py  glossary.py  ingest.py  langdetect_util.py  queue.py  storage.py  translate.py  watchdog.py
backend/tests/: conftest.py  test_adapter_llamacpp.py  test_adapter_variants.py  test_admin_gate.py  test_analyzer.py  test_assemble.py  test_credits.py  test_glossary.py  test_glossary_injection.py  test_ingest.py  test_langdetect.py  test_queue.py  test_storage.py  test_tenancy.py  test_translate.py  test_translate_context.py  test_watchdog.py  test_worker_endpoints.py
docs/: MAC-APP.md  WORKERS.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: install.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: credits-badge.tsx  quota-banner.tsx  recent-documents.tsx  upload-card.tsx  user-menu.tsx
frontend/src/app/_lib/: admin.ts  auth.ts  languages.ts  passkey.ts  session.ts  supabase.ts
frontend/src/app/admin/: page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/app/_components/: health-badge.tsx  recent-documents.tsx  upload-card.tsx  versions.tsx  worker-badge.tsx
frontend/src/app/app/billing/: page.tsx
frontend/src/app/app/documents/[id]/: _analyze-panel.tsx  _client.tsx  _versions-view.tsx  page.tsx
frontend/src/app/documents/[id]/: _analyze-panel.tsx  page.tsx
frontend/src/app/download/: page.tsx
packaging/mac/: README.md  build.sh  first-run.sh  launcher.sh
scripts/: bootstrap-ubuntu.sh  install-worker.sh  serve.sh  tunnel-setup.sh  tunnel-tailscale.sh
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260421000000_init_schema.sql  20260422000000_add_owner_id.sql  20260422120000_profile_credits.sql  20260422200000_passkey.sql  20260422220000_self_host_license.sql
worker/: README.md  pyproject.toml
worker/babel_worker/: __main__.py  cli.py  client.py  config.py  loop.py  state.py  tray.py
