[project]
name = "babel-backend"
version = "0.0.1"
description = "babel — local-first long document translation service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1",
    "langdetect>=1.0.9",
    # Postgres driver for cloud deploys (Supabase). SQLAlchemy uses it via
    # the postgresql+psycopg:// URL scheme wired up in app/db.py.
    "psycopg[binary]>=3.2",
    # Auth — verify Supabase-issued JWTs on Authorization: Bearer calls.
    "pyjwt>=2.9",
    # Billing — Stripe Checkout sessions + webhook verification.
    "stripe>=11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
sentry = [
    "sentry-sdk[fastapi]>=2.0",
]

[tool.setuptools]
# Pin the package list so setuptools doesn't try to treat runtime-data dirs
# (jobs/, uploads/, outputs/) as Python packages. Bit me when adding psycopg.
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
